QProcess::error was deprecated in 5.6 in favor of a new QProcess::errorOccurred, and marked with QT_MOC_COMPAT .
This has the effect that now every use of QProcess::error in a QObject::connect leads to a runtime warning that cannot be disabled
QObject::connect: Connecting from COMPAT signal (QProcess::error(QProcess::ProcessError))
This seems to draconic for apps that need to support a wider range of Qt versions.