Remove QT_MOC_COMPAT from deprecated QProcess::error signal

QT_MOC_COMPAT has the unfortunate behavior that it generates a warning
at runtime, which also cannot be disabled. This is too draconic.

Task-number: QTBUG-51517
Change-Id: I80af8b8b482671e4c9567281c3b1c504d737e202
Reviewed-by: hjk <hjk@theqtcompany.com>
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>

cregit: 9a999eb7b09b5ddf1545546b9e71b0326c0bb0d2 https://github.com/qt/qtbase/commit/9a999eb7b09b5ddf1545546b9e71b0326c0bb0d2